=== 2.4.2 / ?

* N Minor Enhancements
  * Added --pipe for turning RDoc on stdin into HTML

* N Bug Fixes
  * Writing the ri cache file to the proper directory.  Bug #24459 by Lars
    Christensen.
  * Possible fix for Dir::[] and Pathname interaction on 1.9.  Bug #24650 by
    tiburon.
  * Fixed scanning constants for if/end, etc. pairs.  Bug #24609 by Ryan
    Davis.
  * Fixed private methods in the C parser.  Bug #24599 by Aaron Patterson.
  * Fixed display of markup on RDoc main page.  Bug #24168 by rhubarb.
  * Fixed display of \\ character in documentation proceeding words.
    Bug #22112 by James Gray.  See RDoc for details.
  * Fixed parsing and display of arg params for some corner cases.  Bug #21113
    by Csiszár Attila.
  * Fixed links in Files box.  Patch #24403 by Eric Wong.
  * Toplevel methods now appear in Object.  Bug #22677 by Ryan Davis.

=== 2.4.1 / 2009-02-26

* 1 Minor Enhancements
  * Added :attr:, :attr_reader:, :attr_writer:, :attr_accessor: directives.
    Replaces --accessor.  See RDoc::Parser::Ruby for details.

* 3 Bug Fixes
  * Don't complain when exiting normally.  Bug by Matt Neuburg.
  * Restore --inline-source that warns
  * Fixed links to files in Darkfish output

=== 2.4.0 / 2009-02-24

* 9 Minor Enhancements
  * `ri -f html` is now XHTML-happy
  * Clarified RDoc::Markup link syntax.  Bug #23517 by Eric Armstrong.
  * Number of threads to parse with is now configurable
  * Darkfish can now use alternate templates from $LOAD_PATH via -T
  * Removed F95 parser in favor of the rdoc-f95 gem
  * Moved HTML and XML generators to unmaintained
    * No gem will be provided as it's too difficult to make them work
    * Removed options --one-file, --style=, --inline-source, --promiscuous,
      --op-name
  * Removed support for --accessor, use regular documentation or
    the method directive instead.  See RDoc::Parser::Ruby
  * Removed --ri-system as it is unused by Ruby's makefiles
  * Added method list to index.html

* 6 Bug Fixes